--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
   server:
       build:
         context: server
+      container_name: loopback-server
       ports:
         - "8080:8080"
       environment:
@@ -76,6 +77,7 @@ services:
 
   client:
       build: client
+      container_name: client
       ports:
           - "4200:4200"
           - "49153:49153"
@@ -98,6 +100,7 @@ services:
 
   composer-cli:
     image: hyperledger/composer-cli:0.19.14
+    container_name: composer-cli
     env_file: ./composer/.env
     volumes:
       - ./composer/resources/.composer:/home/composer/.composer
