Add queries in compoaser and loopback

--- a/server/server/model-config.json
+++ b/server/server/model-config.json
@@ -20,6 +20,10 @@
     "public":     true,
     "dataSource": "private-db"
   },
+  "AltinnParticipant":      {
+    "public":     true,
+    "dataSource": "private-db"
+  },
   "ComposerParticipant":    {
     "dataSource": "private-db",
     "public":     false,
